--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-button [routerLink]="['/home']" color="secondary" expand="block" fill="outline"> Home </ion-button>
-        <ion-button [routerLink]="['/control-panel']" color="secondary" expand="block" fill="outline"> Control Panel </ion-button>
-        <ion-button [routerLink]="['/profile']" color="secondary" expand="block" fill="outline"> Profile </ion-button>
-        <ion-button [routerLink]="['/login']" color="secondary" expand="block" fill="outline" (click)="closeMenu()" > Log Out </ion-button>
+        <ion-button [routerLink]="['/home']" color="secondary" expand="block" fill="outline"> Inicio </ion-button>
+        <ion-button [routerLink]="['/control-panel']" color="secondary" expand="block" fill="outline"> Panel de Control </ion-button>
+        <ion-button [routerLink]="['/profile']" color="secondary" expand="block" fill="outline"> Perfil </ion-button>
+        <ion-button [routerLink]="['/login']" color="secondary" expand="block" fill="outline" (click)="closeMenu()" > Cerrar Sesión </ion-button>
       </ion-list>
     </ion-content>
   </ion-menu>
