--- a/src/app/control-panel/control-panel.page.html
+++ b/src/app/control-panel/control-panel.page.html
@@ -25,6 +25,7 @@
       <ion-card-content> Dia Creación : {{item.CreationDate}} </ion-card-content>
       <ion-card-content> Dia(s) : {{item.Days}} </ion-card-content>
       <ion-card-content> Modalidad : {{item.TypeSession}} </ion-card-content>
+      <ion-card-content> Tipo : {{item.TypeOfMeet}} </ion-card-content>
       <ion-button color="danger" (click)= "optOut(item)">Salir del Curso</ion-button>
     </ion-card>
   </ion-list>
