--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,6 +35,7 @@
       <ion-card-content> Fecha de creación : {{item.CreationDate}} </ion-card-content>
       <ion-card-content> Dia(s) : {{item.Days}} </ion-card-content>
       <ion-card-content> Modalidad : {{item.TypeSession}} </ion-card-content>
+      <ion-card-content> Tipo : {{item.TypeOfMeet}} </ion-card-content>
       <ion-button color="secondary" (click)="enroll2Course(item)">Registrarme</ion-button>
     </ion-card>
   </ion-list>
