--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -26,7 +26,7 @@
         <ion-col size="12">
           <ion-item>
             <ion-label position="floating">Nombre</ion-label>
-            <ion-input formControlName="name" placeholder=""></ion-input>
+            <ion-input formControlName="nombre" placeholder=""></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -34,8 +34,17 @@
       <ion-row>
         <ion-col size="12">
           <ion-item>
-            <ion-label position="floating">Sobre mi</ion-label>
-            <ion-input formControlName="aboutMe" placeholder=""></ion-input>
+            <ion-label position="floating">Facultad</ion-label>
+            <ion-input formControlName="facultad" placeholder=""></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Matricula</ion-label>
+            <ion-input formControlName="matricula" placeholder=""></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
